--- a/README.Rmd
+++ b/README.Rmd
@@ -38,7 +38,7 @@ The $MDISC$ shows the highest level of discrimination an item can achieve in the
 
 A novel theoretical contribution to DMIRT is the use of constructs in the `D3mirt` functions. Constructs, in this context, refer to the assumption that a subset of items can measure a higher-order latent variable. In `D3mirt`, constructs are implemented as optional vectors whose orientation is calculated as the average direction, i.e., the average multidimensional discrimination of a subset of items in the model. A construct vector will, therefore, point in the direction of the maximum slope of an imaginary item response function indicated by the items chosen by the user.
 
-If constructs are used, the output will include reporting of the directional discrimination ($DDISC$) parameter that shows how well the items discriminate under the assumption that they measure one of the constructs used in the analysis. That is, while the $MDISC$ represents the maximum level of discrimination in the model, the $DDISC$ represents the local discrimination that makes it possible to compare item discrimination in a specific direction set by the constructs. Constructs are visually represented with construct vector arrows scaled to an arbitrary length.
+If constructs are used, the output will include reporting of the directional discrimination ($DDISC$) parameter that shows how well the items discriminate under the assumption that they measure one of the constructs used in the analysis. That is, while the $MDISC$ represents the maximum level of discrimination in the model, the $DDISC$ represents the local discrimination that makes it possible to compare item discrimination in a specific direction set by the constructs. The constructs are, therefore, like unidimensional models nested in the multidimensional latent space and are visually represented with construct vector arrows scaled to an arbitrary length.
 
 # Overview
 
@@ -199,7 +199,7 @@ plotD3mirt(g,
 
 An example of how the output can be described could be as follows.
 
-> As can be seen in Figures 1 and 2, the pattern in the data indicates the presence of foremost two main latent dimensions indicated by the items, one aligned with the $x$-axis and one approaching the $y$-axis. We might also suspect the presence of a third dimension located close to the $xy$-plane, between the $x$ and $z$ axes. Studying the content of the items, the labels *Compassion*, *Conformity*, and *Fairness* were introduced. The angles of the constructs inform us that Compassion ($\theta = 1.710^{\circ}$, $\phi = 86.486^{\circ}$) and Conformity ($\theta = - 2.519^{\circ}$,$\phi = 28.192^{\circ}$) have some within-multidimensional tendencies. However, they are both more or less orthogonal to the $z$-axis ($\theta = 1.710^{\circ}$ and $\theta = -2.519^{\circ}$ respectively). Next, we find Fairness ($\theta = 49.106^{\circ}$, $\phi = 78.308^{\circ}$) with clear within-multidimensional tendencies with respect to the $x$-axis. Thus, the output indicates that Compassion and Conformity could be independent constructs but that Fairness seems not to be.
+> As can be seen in Figures 1 and 2, the pattern in the data indicates the presence of foremost two main nested latent dimensions indicated by the items, one aligned with the $x$-axis and one approaching the $y$-axis. We might also suspect the presence of a third dimension located close to the $xy$-plane, between the $x$ and $z$ axes. Studying the content of the items, the labels *Compassion*, *Conformity*, and *Fairness* were introduced. The angles of the constructs inform us that Compassion ($\theta = 1.710^{\circ}$, $\phi = 86.486^{\circ}$) and Conformity ($\theta = - 2.519^{\circ}$,$\phi = 28.192^{\circ}$) have some within-multidimensional tendencies. However, they are both more or less orthogonal to the $z$-axis ($\theta = 1.710^{\circ}$ and $\theta = -2.519^{\circ}$ respectively). Next, we find Fairness ($\theta = 49.106^{\circ}$, $\phi = 78.308^{\circ}$) with clear within-multidimensional tendencies with respect to the $x$-axis. Thus, the output indicates that Compassion and Conformity could be independent constructs but that Fairness seems not to be.
 
 As was mentioned above, the W7Q16 was not included in any of the constructs because the item had measurement problems. For example, the short vector arrows indicate high amounts of model violations. Moreover, the location of the item in the model also indicates that the item is within-multidimensional and that it does not seem to belong to any construct explicitly.
 
