--- a/README.Rmd
+++ b/README.Rmd
@@ -318,7 +318,9 @@ plotD3mirt(g, hide = TRUE,
 
 An example of how the output can be described could be as follows.
 
-> In Figures 7 and 8 we can see a tendency for a profile on age in which younger individuals could be described as less oriented towards Conformity. We can also observe a slight tendency for an interaction effect in which higher levels of Conformity seem to be associated with lower levels of Fairness. \# Exporting The RGL Device
+> In Figures 7 and 8 we can see a tendency for a profile on age in which younger individuals could be described as less oriented towards Conformity. We can also observe a slight tendency for an interaction effect in which higher levels of Conformity seem to be associated with lower levels of Fairness. 
+
+# Exporting The RGL Device
 
 Some options for exporting the RGL device are shown below. Over and above these, it is also possible to export graphical devices in R Markdown documents with `rgl::hookwebgl()` together with graphical options for knitr, as was done when creating this vignette.
 
